[package]
name = "cart-cache"
description = "CART cache replacement policy"
version = "0.1.1"
homepage = "https://github.com/jedisct1/rust-cart"
keywords = ["cache"]
license = "MIT"
authors = ["Frank Denis <github@pureftpd.org>"]

[dependencies]
slab = "~0.2.0"
count-min-sketch = "~0.1.0"

[dev-dependencies]
rand = "~0.3.14"
